--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   flutter_native_splash: ^2.4.6
   flutter_svg: ^2.1.0
   animate_do: ^4.2.0
+  get_it: ^8.0.3
+  json_annotation: ^4.9.0
+  dartz: ^0.10.1
 
 
 
@@ -47,6 +50,7 @@ dev_dependencies:
   build_runner: ^2.4.15
   freezed: ^2.5.8
   objectbox_generator: ^4.2.0
+  json_serializable: ^6.9.5
 
   
 
