--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,14 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  bloc: ^9.0.0
   flutter_bloc: ^9.1.1
   freezed_annotation: ^2.4.1
   connectivity_plus: ^6.1.4
   path_provider: ^2.1.5
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
+  cloud_firestore: ^5.6.7
   google_sign_in: ^6.3.0
   flutter_map: ^8.1.1
   dio: ^5.8.0+1
