--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   iconsax_plus: ^1.0.0
   lottie: ^3.3.1
   cached_network_image: ^3.4.1
+  image_picker: ^1.1.2
+  intl: ^0.19.0
 
 
 
