add easy_localization package and add localization to onboarding and auth screens

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -8,6 +8,13 @@
 		<key>NSPhotoLibraryUsageDescription</key>
 		<string>Need photo library access to select photos</string>
 
+		<!-- Easy Localization -->
+		<key>CFBundleLocalizations</key>
+		<array>
+		<string>en</string>
+		<string>ar</string>
+		</array>
+
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleDisplayName</key>
