--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0
   smooth_page_indicator: ^1.2.1
+  easy_localization: ^3.0.7+1
 
 
 
@@ -74,6 +75,7 @@ flutter:
     - assets/lotties/
     - assets/illustrations/
     - assets/logo/
+    - assets/translation/
 
 
 
