--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   path_provider: ^2.1.5
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
+  firebase_messaging: ^15.2.6
   cloud_firestore: ^5.6.7
   google_sign_in: ^6.3.0
   flutter_map: ^8.1.1
