--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
 <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" /> <!-- For Android 10+ -->
+<uses-permission android:name="android.permission.INTERNET" />
     <application
         android:label="ionic"
         android:name="${applicationName}"
