--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,6 @@ dependencies:
   bloc: ^9.0.0
   flutter_bloc: ^9.1.1
   freezed_annotation: ^2.4.1
-  connectivity_plus: ^6.1.4
   path_provider: ^2.1.5
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
@@ -48,6 +47,7 @@ dependencies:
   intl: ^0.19.0
   smooth_page_indicator: ^1.2.1
   easy_localization: ^3.0.7+1
+  internet_connection_checker_plus: ^2.7.2
 
 
 
