--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   easy_localization: ^3.0.7+1
   internet_connection_checker_plus: ^2.7.2
+  skeletonizer: ^1.4.3
 
 
 
