--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   easy_localization: ^3.0.7+1
   internet_connection_checker_plus: ^2.7.2
   skeletonizer: ^1.4.3
+  connectivity_plus: ^6.1.4
 
 
 
