feat: Implement address management features
- Add AddressEntity class to represent address data.
- Create AddressRepo interface for address-related operations.
- Implement LocateOnMapCubit for managing location and address retrieval.
- Define LocateOnMapState with various states for loading, success, and error.
- Create AddressDetailsView for displaying and confirming address details.
- Develop DefaultAddressView for managing default addresses.
- Implement LocateOnMapView for selecting a location on the map.
- Create UI components for address details, personal info, and additional info.
- Add custom map widget with location functionality.
- Implement confirm button for location selection.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -15,6 +15,10 @@
 		<string>ar</string>
 		</array>
 
+		<!-- Address (Flutter Map) -->
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>This app needs access to your location to pick your address.</string>
+
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleDisplayName</key>
