--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,6 @@ dependencies:
   firebase_messaging: ^15.2.6
   cloud_firestore: ^5.6.7
   google_sign_in: ^6.3.0
-  flutter_map: ^8.1.1
   dio: ^5.8.0+1
   device_preview: ^1.2.0
   objectbox: ^4.2.0
@@ -50,7 +49,11 @@ dependencies:
   internet_connection_checker_plus: ^2.7.2
   skeletonizer: ^1.4.3
   connectivity_plus: ^6.1.4
-
+  flutter_map: ^8.1.1
+  flutter_map_cancellable_tile_provider: ^3.1.0
+  latlong2: ^0.9.1
+  location: ^8.0.0
+  geocoding: ^4.0.0
 
 
 dev_dependencies:
