--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   geocoding: ^4.0.0
   flutter_stripe: ^11.5.0
   flutter_dotenv: ^5.2.1
+  supabase_flutter: ^2.9.1
+  flutter_inappwebview: ^6.1.5
 
 
 dev_dependencies:
