--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   path_provider: ^2.1.5
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
-  firebase_messaging: ^15.2.6
+  firebase_messaging: ^15.2.7
   cloud_firestore: ^5.6.7
   google_sign_in: ^6.3.0
   dio: ^5.8.0+1
@@ -58,6 +58,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   supabase_flutter: ^2.9.1
   flutter_inappwebview: ^6.1.5
+  app_settings: ^6.1.1
 
 
 dev_dependencies:
