--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   supabase_flutter: ^2.9.1
   flutter_inappwebview: ^6.1.5
   app_settings: ^6.1.1
+  share_plus: ^11.0.0
 
 
 dev_dependencies:
