--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -1,36 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-		<!-- InAppWebView -->
-		<dict>
+	<!-- InAppWebView -->
+	<dict>
 		<key>NSAppTransportSecurity</key>
 		<dict>
-		<key>NSAllowsArbitraryLoads</key><true/>
+			<key>NSAllowsArbitraryLoads</key>
+			<true/>
 		</dict>
-	
 		<!-- Stripe -->
 		<key>NSCameraUsageDescription</key>
 		<string>Scan your card to add it automatically</string>
 		<key>NSCameraUsageDescription</key>
 		<string>To scan cards</string>
-
 		<!-- Image Picker -->
 		<key>NSCameraUsageDescription</key>
 		<string>Need camera access to take photos</string>
 		<key>NSPhotoLibraryUsageDescription</key>
 		<string>Need photo library access to select photos</string>
-
 		<!-- Easy Localization -->
 		<key>CFBundleLocalizations</key>
 		<array>
-		<string>en</string>
-		<string>ar</string>
+			<string>en</string>
+			<string>ar</string>
 		</array>
-
 		<!-- Address (Flutter Map) -->
 		<key>NSLocationWhenInUseUsageDescription</key>
 		<string>This app needs access to your location to pick your address.</string>
-
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleDisplayName</key>
